@@ -27,6 +27,7 @@ TUNER_MASTERS =	\
 	masterinfos/silverlight/System.Net.info	\
 	masterinfos/silverlight/System.Core.info	\
 	masterinfos/silverlight/System.Xml.info	\
+	masterinfos/silverlight/System.Runtime.Serialization.info
 
 LOCAL_MCS_FLAGS = -r:$(LINKER) -r:Mono.Cecil.dll
 
@@ -35,7 +36,7 @@ DISTFILES = README $(TUNER_SOURCES) $(TUNER_DESCS) $(TUNER_MASTERS)
 WORKING_DIR = $(topdir)/class/lib/net_2_1_raw
 OUTPUT_DIR = $(topdir)/class/lib/net_2_1
 
-DLLFILES = mscorlib.dll System.dll System.Net.dll System.Xml.dll System.Core.dll
+DLLFILES = mscorlib.dll System.dll System.Net.dll System.Xml.dll System.Core.dll System.Runtime.Serialization.dll
 FILES = smcs.exe $(DLLFILES)
 WORKING_FILES = $(FILES:%=$(WORKING_DIR)/%)
 OUTPUT_FILES = $(FILES:%=$(OUTPUT_DIR)/%)
@@ -92,7 +93,7 @@ GACUTIL = MONO_PATH="$(topdir)/class/lib/net_1_1_bootstrap$(PLATFORM_PATH_SEPARA
 
 TUNER_INSTALL_DIR = $(DESTDIR)$(mono_libdir)/mono/2.1
 
-end-install: inst-mscorlib.dll inst-smcs.exe gac-System gac-System.Net gac-System.Xml gac-System.Core
+end-install: inst-mscorlib.dll inst-smcs.exe gac-System gac-System.Net gac-System.Xml gac-System.Core gac-System.Runtime.Serialization
 
 inst-%: $(OUTPUT_DIR)/%
 	$(MKINSTALLDIRS) $(TUNER_INSTALL_DIR)
